--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
 <!-- Строка 4
 
 <h1>LOCATION TO HIDE:</h1>
-<img src="images/location.jpg" alt="location" class="my-image"> 
+<img src="location.jpg" alt="location" class="my-image"> 
 <p> 21.07.2025 AT 00:00 HERE: 51°06'01.9"N 17°02'16.3"E</p>
 -->
 
